# libsnark_modified

./: Bucket_accmulation.py  CMakeCache.txt  CMakeLists.txt  benchmark_sha256_groth16.cpp  benchmark_sha256_groth162.cpp
libsnark/depends/: CMakeLists.txt
libsnark/depends/libff/libff/algebra/scalar_multiplication/: multiexp.hpp  multiexp.tcc
libsnark/libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/: r1cs_gg_ppzksnark.hpp  r1cs_gg_ppzksnark.tcc
